# labsys

./: .env.example  .gitignore  DESIGN.md
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 190e2ebf8fcd_server_ssh_port.py  3892fed58d3e_init_users.py  89ba2a45320b_api_keys.py  a1b2c3d4e5f6_discussion_speaks.py  a7b8c9d0e1f2_user_duty_allowance.py  aecfc278e286_requests_state_machine.py  b2cac7992edd_eval_persistence.py  b3d5f7a9c1e2_rating_votes_swap_meetings_feedback.py  b4e6c8d2f0a1_meeting_host_rating_logic.py  b5c6d7e8f9a0_user_name_unique.py  b8c9d0e1f2a3_eval_award_duty.py  c0ffee5a17ed_server_credentials.py  c1a971401a5a_servers_and_notifications.py  c1d3e5f7a9b2_evalconfig_period.py  c2d3e4f5a6b7_award_bonuses.py  c5a7e1f9d3b2_meeting_type_freetext.py  d0e1f2a3b4c5_merge_meeting_type_and_evalconfig_period.py  d1aa0c5e7b22_ssh_credentials.py  d1e2f3a4b5c6_meeting_template_excellence_note.py  e2f1a3b4c5d6_eval_on_meetings.py  e2f3a4b5c6d7_audit_logs.py  e3f4a5b6c7d8_eval_unique_constraints.py  e821e0ca1461_lab_semester_config_announcements_.py  f1e5034cd80c_meeting_online_password_labconfig_auto_.py  f5a6b7c8d9e0_excellence_unique_period.py  f7a9c2d4e8b1_user_disabled.py
backend/app/: main.py
backend/app/core/: config.py  crypto.py  db.py  (+2 more)
backend/scripts/: cibol_2026spring.json  import_cibol_2026spring.py
backend/tests/: conftest.py  eval_reference.mjs  test_auth.py  test_dmxapi.py  test_eval.py  test_feedback.py  test_my_topic.py  test_requests.py  test_swap_and_rating.py
(+136 files in other folders)
