[project]
name = "cibol-backend"
version = "0.1.0"
description = "CIBOL 实验室系统 — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "python-multipart>=0.0.12",
    "redis>=5.2",
    "structlog>=24.4",
    "httpx>=0.27",
    "asyncssh>=2.18",
    "playwright>=1.49",        # 腾讯会议预约：自动化 vc.bnu.edu.cn 门户
    "apscheduler>=3.11",       # 自动预约调度
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "aiosqlite>=0.20",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
